migration-result/ver/13.x/database-access/guides/redis.mdx
---
title: Database Access with Redis
description: How to configure Teleport database access with Redis.
version: '13.x'
---

If you want to configure Redis Cluster, please read [Database Access with Redis Cluster](/ver/13.x/database-access/guides/redis-cluster).

This guide will help you to:

- Install and configure Teleport.
- Configure mutual TLS authentication between Teleport and Redis.
- Connect to Redis through Teleport.

![Teleport Database Access Redis Self-Hosted](../../../../../assets/redis_selfhosted-8042759d6d.png)

![Teleport Database Access Redis Cloud](../../../../../assets/redis_cloud-bb682098a0.png)

## Prerequisites

<Tabs>
  <Tab title="Open Source">
    - A running Teleport cluster. For details on how to set this up, see our
      [Getting Started](/ver/13.x/index) guide.

    - The `tctl` admin tool and `tsh` client tool version >= 13.2.0.

      ```code
      $ tctl version
      # Teleport v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```

      See [Installation](/ver/13.x/installation) for details.
  </Tab>

  <Tab title="Enterprise">
    - A running Teleport Enterprise cluster. For details on how to set this up, see our Enterprise
      [Getting Started](/ver/13.x/choose-an-edition/teleport-enterprise/introduction) guide.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0,
      which you can download by visiting your [Teleport account](https://teleport.sh).

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>

  <Tab title="Teleport Cloud">
    - A Teleport Enterprise Cloud account. If you do not have one, visit the [signup
      page](https://goteleport.com/signup/) to begin a free trial of Teleport Team
      and upgrade to Teleport Enterprise Cloud.

    - The Enterprise `tctl` admin tool and `tsh` client tool version >= 13.2.0.
      To download these tools, visit the [Downloads](/ver/13.x/choose-an-edition/teleport-cloud/downloads) page.

      ```code
      $ tctl version
      # Teleport Enterprise v13.2.0 go1.20

      $ tsh version
      # Teleport v13.2.0 go1.20
      ```
  </Tab>
</Tabs>

- Redis version `6.0` or newer.

- `redis-cli` version `6.2` or newer installed and added to your system's `PATH` environment variable.

- A host where you will run the Teleport Database Service.

  See [Installation](/ver/13.x/installation) for details.

<Note>
  Redis `7.0` and RESP3 (REdis Serialization Protocol) are currently not supported.
</Note>

- Make sure you can connect to Teleport. Log in to your cluster using `tsh`, then use `tctl`
  remotely:
  ```code
  $ tsh login --proxy=teleport.example.com --user=email@example.com
  $ tctl status
  # Cluster  teleport.example.com
  # Version  13.2.0
  # CA pin   sha256:abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678abdc1245efgh5678
  ```
  You can run subsequent `tctl` commands in this guide on your local machine.

  For full privileges, you can also run `tctl` commands on your Auth Service host.
  ```code
  $ tsh login --proxy=myinstance.teleport.sh --user=email@example.com
  $ tctl status
  # Cluster  myinstance.teleport.sh
  # Version  13.2.0
  # CA pin   sha256:sha-hash-here
  ```
  You must run subsequent `tctl` commands in this guide on your local machine.

## Step 1/5. Set up the Teleport Database Service

The Database Service requires a valid auth token to connect to the cluster. Generate
one by running the following command against your Teleport Auth Service and save
it in `/tmp/token` on the node that will run the Database Service:

```code
$ tctl tokens add --type=db
```

Install and configure Teleport where you will run the Teleport Database Service:

<Tabs>
  <Tab title="Linux Server">
    Use the appropriate commands for your environment to install your package:

    <Tabs dropdownView dropdownCaption="Teleport Edition">
      <Tab title="Open Source">
        ```code
        $ curl https://goteleport.com/static/install.sh | bash -s 13.2.0
        ```
      </Tab>

      <Tab title="Enterprise">
        <Tabs>
          <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport APT repository for v13. You'll need to update this
            # file for each major release of Teleport.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/v13" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo apt-get install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo yum install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport YUM repository for v13. You'll need to update this
            # file for each major release of Teleport.
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/v13/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```

            For FedRAMP/FIPS-compliant installations, install the `teleport-ent-fips` package instead:

            ```code
            $ sudo dnf install teleport-ent-fips
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```

            For FedRAMP/FIPS-compliant installations of Teleport Enterprise, package URLs
            will be slightly different:

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-fips-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>
      </Tab>

      <Tab title="Cloud">
        <Tabs>
          <Tab title="Debian 8+/Ubuntu 16.04+ (apt)">
            Add the Teleport repository to your repository list:

            ```code
            # Download Teleport's PGP public key
            $ sudo curl https://apt.releases.teleport.dev/gpg \
            -o /usr/share/keyrings/teleport-archive-keyring.asc
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport apt repository for cloud.
            $ echo "deb [signed-by=/usr/share/keyrings/teleport-archive-keyring.asc] \
            https://apt.releases.teleport.dev/${ID?} ${VERSION_CODENAME?} stable/cloud" \
            | sudo tee /etc/apt/sources.list.d/teleport.list > /dev/null

            $ sudo apt-get update
            $ sudo apt-get install teleport-ent
            ```
          </Tab>

          <Tab title="Amazon Linux 2/RHEL 7 (yum)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport yum repository for cloud.
            # First, get the major version from $VERSION_ID so this fetches the correct
            # package version.
            $ VERSION_ID=$(echo $VERSION_ID | grep -Eo "^[0-9]+")
            $ sudo yum-config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"
            $ sudo yum install teleport-ent
            #
            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Amazon Linux 2023/RHEL 8+ (dnf)">
            ```code
            # Source variables about OS version
            $ source /etc/os-release
            # Add the Teleport yum repository for cloud.
            # Use the dnf config manager plugin to add the teleport RPM repo
            $ sudo dnf config-manager --add-repo "$(rpm --eval "https://yum.releases.teleport.dev/$ID/$VERSION_ID/Teleport/%{_arch}/stable/cloud/teleport.repo")"

            # Install teleport
            $ sudo dnf install teleport-ent

            # Tip: Add /usr/local/bin to path used by sudo (so 'sudo tctl users add' will work as per the docs)
            # echo "Defaults    secure_path = /sbin:/bin:/usr/sbin:/usr/bin:/usr/local/bin" > /etc/sudoers.d/secure_path
            ```
          </Tab>

          <Tab title="Tarball">
            In the example commands below, update `$SYSTEM_ARCH` with the appropriate
            value (`amd64`, `arm64`, or `arm`). All example commands using this variable
            will update after one is filled out.

            ```code
            $ curl https://get.gravitational.com/teleport-ent-v13.2.0-linux-$SYSTEM_ARCH-bin.tar.gz.sha256
            # <checksum> <filename>
            $ curl -O https://cdn.teleport.dev/teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            $ shasum -a 256 teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            # Verify that the checksums match
            $ tar -xvf teleport-ent-v13.2.0-linux-amd64-bin.tar.gz
            $ cd teleport-ent
            $ sudo ./install
            ```
          </Tab>
        </Tabs>

        <Accordion title="Is my Teleport instance compatible with Teleport Cloud?">
          Before installing a `teleport` binary with a version besides v13,
          read our compatibility rules to ensure that the binary is compatible with
          Teleport Cloud.

          When running multiple `teleport` binaries within a cluster, the following rules
          apply:

          - **Patch and minor** versions are always compatible, for example, any 8.0.1
            component will work with any 8.0.3 component and any 8.1.0 component will work
            with any 8.3.0 component.
          - Servers support clients that are 1 major version behind, but do not support
            clients that are on a newer major version. For example, an 8.x.x Proxy Service
            is compatible with 7.x.x resource services and 7.x.x `tsh`, but we don't
            guarantee that a 9.x.x resource service will work with an 8.x.x Proxy Service.
            This also means you must not attempt to upgrade from 6.x.x straight to 8.x.x.
            You must upgrade to 7.x.x first.
          - Proxy Services and resource services do not support Auth Services that are on
            an older major version, and will fail to connect to older Auth Services by
            default. This behavior can be overridden by passing `--skip-version-check`
            when starting Proxy Services and resource services.
        </Accordion>
      </Tab>
    </Tabs>

    <Tabs>
      <Tab title="Using a config file">
        On the host where you will run the Teleport Database Service, start Teleport
        with the appropriate configuration.

        Note that a single Teleport process can run multiple different services, for
        example multiple Database Service agents as well as the SSH Service or Application
        Service. The step below will overwrite an existing configuration file, so if
        you're running multiple services add `--output=stdout` to print the config in
        your terminal, and manually adjust `/etc/teleport.yaml`.

        Generate a configuration file at `/etc/teleport.yaml` for the Database Service:

        ```code
        $ teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=teleport.example.com:443 \
           --name=example-redis \
           --protocol=redis \
           --uri=rediss://redis.example.com:6379 \
           --labels=env=dev 
        ```

        ```code
        $ teleport db configure create \
           -o file \
           --token=/tmp/token \
           --proxy=mytenant.teleport.sh:443 \
           --name=example-redis \
           --protocol=redis \
           --uri=rediss://redis.example.com:6379 \
           --labels=env=dev
        ```

        Configure the Database Service to start automatically when the host boots up by
        creating a systemd service for it. The instructions depend on how you installed
        the Database Service.

        <Tabs>
          <Tab title="Package Manager">
            On the host where you will run {{ service }}, start Teleport:

            ```code
            $ sudo systemctl enable teleport
            $ sudo systemctl start teleport
            ```
          </Tab>

          <Tab title="TAR Archive">
            On the host where you will run {{ service }}, create a systemd service
            configuration for Teleport, enable the Teleport service, and start Teleport:

            ```code
            $ sudo teleport install systemd -o /etc/systemd/system/teleport.service
            $ sudo systemctl enable teleport
            $ sudo systemctl start teleport
            ```
          </Tab>
        </Tabs>
      </Tab>

      <Tab title="With CLI flags">
        You can start the Teleport Database Service without configuration file using a
        CLI command:

        ```code
        $ teleport db start \
           --token=/tmp/token \
           --auth-server=teleport.example.com:443 \
           --name=example-redis  \
           --protocol=redis \
           --uri=rediss://redis.example.com:6379 \
           --labels=env=dev
        ```

        Note that the `--auth-server` flag must point to the Teleport cluster's Proxy
        Service endpoint because the Database Service always connects back to the
        cluster over a reverse tunnel.

        ```code
        $ teleport db start \
           --token=/tmp/token \
           --auth-server=mytenant.teleport.sh:443 \
           --name=example-redis \
           --protocol=redis \
           --uri=rediss://redis.example.com:6379 \
           --labels=env=dev
        ```

        Note that the `--auth-server` flag must point to your Teleport Cloud tenant
        address.
      </Tab>
    </Tabs>

    <Note>
      The `--auth-server` flag must point to the Teleport cluster's Proxy Service
      endpoint because the Database Service always connects back to the cluster over a
      reverse tunnel.
    </Note>
  </Tab>

  <Tab title="Kubernetes Cluster">
    Teleport provides Helm charts for installing the Teleport Database Service in Kubernetes Clusters.

    To allow Helm to install charts that are hosted in the Teleport Helm repository, use `helm repo add`:

    ```code
    $ helm repo add teleport https://charts.releases.teleport.dev
    ```

    To update the cache of charts from the remote repository, run `helm repo update`:

    ```code
    $ helm repo update
    ```

    Install the Teleport Kube Agent into your Kubernetes Cluster
    with the Teleport Database Service configuration.

    ```code
    $ JOIN_TOKEN=$(cat /tmp/token)
    $ helm install teleport-kube-agent teleport/teleport-kube-agent \
      --create-namespace \
      --namespace teleport-agent \
      --set roles=db \
      --set proxyAddr=teleport.example.com:443 \
      --set authToken=${JOIN_TOKEN?} \
      --set "databases[0].name=example-redis" \
      --set "databases[0].uri=rediss://redis.example.com:6379" \
      --set "databases[0].protocol=redis" \
      --set "labels.env=dev" \
      --version 13.2.0
    ```

    Install the Teleport Kube Agent into your Kubernetes Cluster
    with the Teleport Database Service configuration.

    ```code
    $ JOIN_TOKEN=$(cat /tmp/token)
    $ helm install teleport-kube-agent teleport/teleport-kube-agent \
      --create-namespace \
      --namespace teleport-agent \
      --set roles=db \
      --set proxyAddr=mytenant.teleport.sh:443 \
      --set authToken=${JOIN_TOKEN?} \
      --set "databases[0].name=example-redis" \
      --set "databases[0].uri=rediss://redis.example.com:6379" \
      --set "databases[0].protocol=redis" \
      --set "labels.env=dev" \
      --version 13.2.0
    ```
  </Tab>
</Tabs>

<Tip>
  A single Teleport process can run multiple services, for example
  multiple Database Service instances as well as other services such the
  SSH Service or Application Service.
</Tip>

## Step 2/5. Create a Teleport user

<Tip>
  To modify an existing user to provide access to the Database Service, see [Database Access Access Controls](/ver/13.x/database-access/rbac)
</Tip>

Create a local Teleport user with the built-in `access` role:

```code
$ tctl users add \
  --roles=access \
  --db-users=\* \
  --db-names=\* \
  alice
```

Create a local Teleport user with the built-in `access` and `requester` roles:

```code
$ tctl users add \
  --roles=access,requester \
  --db-users=\* \
  --db-names=\* \
  alice
```

| Flag                      | Description                                                                                                                              |
| ------------------------- | ---------------------------------------------------------------------------------------------------------------------------------------- |
| <nobr>`--roles`</nobr>    | List of roles to assign to the user. The builtin `access` role allows them to connect to any database server registered with Teleport.   |
| <nobr>`--db-users`</nobr> | List of database usernames the user will be allowed to use when connecting to the databases. A wildcard allows any user.                 |
| <nobr>`--db-names`</nobr> | List of logical databases (aka schemas) the user will be allowed to connect to within a database server. A wildcard allows any database. |

<Warning>
  Database names are only enforced for PostgreSQL and MongoDB databases.
</Warning>

For more detailed information about database access controls and how to restrict
access see [RBAC](/ver/13.x/database-access/rbac) documentation.

## Step 3/5. Create Redis users

Each Redis user must be protected by a strong password. We recommend using OpenSSL to generate passwords:

```shell
openssl rand -hex 32
```

<Note>
  If you have access to Redis you can also generate a password by using the below command from the Redis console:

  ```
  ACL GENPASS
  ```
</Note>

Create a `users.acl` file, which defines users for your Redis deployment, passwords required to log in as a given user,
and sets of ACL rules. Redis allows you to provide passwords in plaintext or an SHA256 hash.
We strongly recommend using an SHA256 hash instead of plaintext passwords.

You can use the command below to generate an SHA256 hash from a password.

```shell
echo -n STRONG_GENERATED_PASSWORD | sha256sum
```

```text
user alice on #57639ed88a85996453555f22f5aa4147b4c9614056585d931e5d976f610651e9 allcommands allkeys
user default off
```

For more ACL examples refer to the [Redis documentation](https://redis.io/docs/manual/security/acl/).

<Warning>
  It's very important to either disable or protect with a password the `default` user. Otherwise, everyone with access
  to the database can log in as the `default` user, which by default has administrator privileges.
</Warning>

## Step 4/5. Set up mutual TLS

Teleport uses mutual TLS authentication with self-hosted databases. These
databases must be configured with Teleport's certificate authority to be
able to verify client certificates. They also need a certificate/key pair that
Teleport can verify.

Your Teleport Cloud user
must be allowed to impersonate the system role `Db` in order to be able to
generate the database certificate.

Include the following `allow` rule in in your Teleport Cloud user's role:

```yaml
allow:
  impersonate:
    users: ["Db"]
    roles: ["Db"]
```

We will show you how to use `tctl auth sign` below.

When connecting to standalone Redis, sign the certificate for the hostname over
which Teleport will be connecting to it.

For example, if your Redis server is accessible at `redis.example.com`,
run:

```code
$ tctl auth sign --format=redis --host=redis.example.com --out=server --ttl=2190h
```

<Note>
  We recommend using a shorter TTL, but keep mind that you'll need to update the
  database server certificate before it expires to not lose the ability to
  connect. Pick the TTL value that best fits your use-case.
</Note>

The command will create three files:

- `server.cas` with Teleport's certificate authority
- `server.key` with a generated private key
- `server.crt` with a generated user certificate

You will need these files to enable mutual TLS on your Redis server.

<Note>
  Teleport 10.0 introduced a new certificate authority that is only used by the Teleport Database Service.
  Older Teleport versions use a host certificate to sign Database Service certificates.

  After upgrading to Teleport 10.0, the host certificate authority will still be used by the Database Service to maintain compatibility.
  The first [certificate rotation](/ver/13.x/management/operations/ca-rotation) will rotate host and database certificates.

  New Teleport 10.0+ installations generate the database certificate authority when they first start, and are not affected
  by the rotation procedure described above.
</Note>

Use the generated secrets to enable mutual TLS in your `redis.conf` configuration
file and restart the database:

```ini
tls-port 6379
port 0
aclfile /path/to/users.acl
tls-ca-cert-file /path/to/server.cas
tls-cert-file /path/to/server.crt
tls-key-file /path/to/server.key
tls-protocols "TLSv1.2 TLSv1.3"
```

Once mutual TLS has been enabled, you will no longer be able to connect to
the cluster without providing a valid client certificate. You can use the
`tls-auth-clients optional` setting to allow connections
from clients that do not present a certificate.

See [TLS Support](https://redis.io/topics/encryption)
in the Redis documentation for more details.

## Step 5/5. Connect

Log into your Teleport cluster and see available databases:

<Tabs>
  <Tab title="Self-Hosted">
    ```code
    $ tsh login --proxy=teleport.example.com --user=alice
    $ tsh db ls
    # Name          Description     Labels
    # ------------- --------------- --------
    # example-redis Example Redis   env=dev
    ```
  </Tab>

  <Tab title="Teleport Cloud">
    ```code
    $ tsh login --proxy=mytenant.teleport.sh --user=alice
    $ tsh db ls
    # Name          Description     Labels
    # ------------- --------------- --------
    # example-redis Example Redis   env=dev
    ```
  </Tab>
</Tabs>

To connect to a particular database instance:

```code
$ tsh db connect example-redis
```

You can optionally specify the database user to use by default when connecting
to the database instance:

```code
$ tsh db connect --db-user=alice example-redis
```

If flag `--db-user` is not provided, Teleport logs in as the `default` user.

Now you can log in as the previously created user using the below command:

```
AUTH alice STRONG_GENERATED_PASSWORD
```

To log out of the database and remove credentials:

```code
# Remove credentials for a particular database instance.
$ tsh db logout example-redis
# Remove credentials for all database instances.
$ tsh db logout
```

### Supported Redis commands

Redis in standalone mode doesn't support the commands below. If one of the listed commands is called Teleport
returns the <nobr>`ERR Teleport: not supported by Teleport`</nobr> error.

- `HELLO`
- `PUNSUBSCRIBE`
- `SSUBSCRIBE`
- `SUNSUBSCRIBE`

## Next steps

{/* lint ignore list-item-spacing remark-lint */}

- Learn how to [restrict access](/ver/13.x/database-access/rbac) to certain users and databases.

{/* lint ignore list-item-spacing remark-lint */}

- View the [High Availability (HA)](/ver/13.x/database-access/guides/ha) guide.

{/* lint ignore list-item-spacing remark-lint */}

- Take a look at the YAML configuration [reference](/ver/13.x/database-access/reference/configuration).

{/* lint ignore list-item-spacing remark-lint */}

- See the full CLI [reference](/ver/13.x/database-access/reference/cli).
